--- a/src/pages/Main/publicationSection/publicationSection.css
+++ b/src/pages/Main/publicationSection/publicationSection.css
@@ -15,3 +15,9 @@
     padding: 0;
     height: auto;
 }
+
+.publication-authors,
+.publication-authors * {
+  font-size: 20px !important; /* !important 确保覆盖内部标签的 style */
+  line-height: 1.5;
+}
